# ai-protofolio

./: README.md
01-n8n-support-automation-pack/: .env.example  .gitignore  README.md  docker-compose.yml
02-n8n-template-hardening-catalog/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
02-n8n-template-hardening-catalog/audited-workflows/: README.md
02-n8n-template-hardening-catalog/docs/: audit-methodology.md  ci-integration.md  hardening-guide.md
02-n8n-template-hardening-catalog/rules/: security_rules.json
02-n8n-template-hardening-catalog/scanner/: __init__.py  __main__.py  cli.py  engine.py  graph.py  main.py  models.py  reporters.py
02-n8n-template-hardening-catalog/scripts/: scan_directory.ps1  scan_directory.sh
02-n8n-template-hardening-catalog/tests/: __init__.py  test_scanner.py
02-n8n-template-hardening-catalog/tests/fixtures/: hardcoded_secrets.json  insecure_webhook.json  secure_webhook.json
03-n8n-lead-support-suite/: .env.example  .gitignore  README.md  docker-compose.yml
04-langgraph-sales-crm-platform/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
05-agentic-rag-support-triage/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
06-multi-agent-saas-router/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
07-invoice-parser-approval-workflow/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
08-financial-extraction-observability/: .env.example  .gitignore  Dockerfile.worker  README.md  (+2 more)
(+259 files in other folders)
