[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "n8n-workflow-hardening"
version = "2.0.0"
description = "Static security scanner for exported n8n workflow JSON files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
n8n-hardening = "scanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
